Error
int@mint:~/Desktop/task5-memory-AaronLeontaris$ make all
cc -g -Wall -O2 -shared -fPIC -ldl -lpthread -o libmymalloc.so task5-memory.c
task5-memory.c: In function ‘extend_heap_size’:
task5-memory.c:45:11: warning: unused variable ‘old_end’ [-Wunused-variable]
   45 |     void *old_end = sbrk(0);
      |           ^~~~~~~
task5-memory.c: At top level:
task5-memory.c:277:7: error: redefinition of ‘extend_heap_size’
  277 | void *extend_heap_size(size_t size) {
      |       ^~~~~~~~~~~~~~~~
task5-memory.c:44:14: note: previous definition of ‘extend_heap_size’ with type ‘void *(size_t)’ {aka ‘void *(long unsigned int)’}
   44 | static void *extend_heap_size(size_t size) {
      |              ^~~~~~~~~~~~~~~~
task5-memory.c: In function ‘extend_heap_size’:
task5-memory.c:278:11: warning: unused variable ‘current_base’ [-Wunused-variable]
  278 |     void *current_base = sbrk(0);
      |           ^~~~~~~~~~~~

